Fixing text overflow in header (fixes #1839)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -434,7 +434,7 @@ body {
     justify-content: end;
   }
 
-  h3 {
+  .overflow-ellipses {
     overflow: hidden;
     text-overflow: ellipsis;
   }
